--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^0.38.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
@@ -64,6 +67,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "2.7.1",
+    "react-router-dom": "^6.4.1",
     "typescript": "^4.8.4"
   }
 }
