--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-	"semi": false,
-	"useTabs": true,
-	"tabWidth": 2,
-	"printWidth": 100,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"jsxSingleQuote": true,
-	"bracketSpacing": true
+  "semi": false,
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 80,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "bracketSpacing": true
 }
