--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
+    "formik-semantic-ui-react": "^2.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "semantic-ui-css-patch && react-scripts start",
@@ -54,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-big-calendar": "^0.38.1",
+    "@types/react-big-calendar": "^0.38.2",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
