--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^4.11.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@semantic-ui-react/css-patch": "^1.1.2",
