--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^4.11.4",
+    "@blueprintjs/table": "^4.7.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@semantic-ui-react/css-patch": "^1.1.2",
@@ -15,6 +16,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "blueprint-form": "^1.9.1",
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
     "formik-semantic-ui-react": "^2.0.0",
@@ -25,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.6",
